Version 3.8.0     unreleased

	* Constrain some dependencies to be compatible with Debian.

Version 3.7.9     05 Nov 2023

	* Update urllib3 to address Dependabot warnings.
	* Upgrade to Poetry v1.7.0 for official Python 3.12 support.

Version 3.7.8     15 Oct 2023

	* Fix Python 3.12 deprecation for datetime.datetime.utcnow().
	* Fix Python 3.12 warning for tar.extract() filter behavior.
	* Fix some non-working remote connectivity tests in 'run tests full'.

Version 3.7.7     14 Oct 2023

	* Upgrade major dependencies.
	* Upgrade build process to Poetry v1.6.1.
	* Add support for Python v3.12 and drop support for v3.8.
	* Document changes to scp configuration for Debian bookworm.

Version 3.7.6     10 Jun 2023

	* Pin chardet and importlib-metadata to match Debian bookworm.

Version 3.7.5     07 Jun 2023

	* Fix checktabs to be safe for file named '-'.
	* Upgrade all dependencies to the latest major version.
	* Upgrade to Poetry v1.5.1 and make related adjustments.

Version 3.7.4     31 Dec 2022

	* Pull Sphinx fields from metadata rather than parsing pyproject.toml.

Version 3.7.3     30 Dec 2022

	* Convert to latest readthedocs.io standard.
	* Update remaining docs, comments, and checks to reflect dropping Python 3.7.
	* Automate the existing manual release process using GitHub Actions.

Version 3.7.2     30 Dec 2022

	* More improvements to metadata for the Debian CI test process.

Version 3.7.1     30 Dec 2022

	* Improvements to metadata to better support the Debian build process.

Version 3.7.0     29 Dec 2022

	* Drop support for Python 3.7.
	* Rename CREDITS -> NOTICE for consistency with my other Python projects.
	* Migrate release.py and various help output to use importlib.metadata.
	* Convert to standard version of .run/tasks/release.sh used elsewhere.

Version 3.6.9     09 Nov 2022

	* Support Python 3.11.
	* Use locale.getlocale() instead of .getdefaultlocale() for Python >= 3.11.