@@ -1,6 +1,7 @@
 Version 3.8.0     unreleased
 
 	* Constrain some dependencies to be compatible with Debian.
+	* Disable intersphinx plugin for docs, which no longer seems to work.
 
 Version 3.7.9     05 Nov 2023
 
